@@ -240,6 +240,24 @@ name|api
 operator|.
 name|records
 operator|.
+name|FinalApplicationStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|QueueACL
 import|;
 end_import
@@ -259,6 +277,24 @@ operator|.
 name|records
 operator|.
 name|Resource
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|YarnApplicationState
 import|;
 end_import
 
@@ -1005,22 +1041,28 @@ argument_list|)
 operator|.
 name|_
 argument_list|(
-literal|"State:"
+literal|"YarnApplicationState:"
 argument_list|,
+name|clarifyAppState
+argument_list|(
 name|app
 operator|.
 name|getState
 argument_list|()
 argument_list|)
+argument_list|)
 operator|.
 name|_
 argument_list|(
-literal|"FinalStatus:"
+literal|"FinalStatus reported by AM:"
 argument_list|,
+name|clairfyAppFinalStatus
+argument_list|(
 name|app
 operator|.
 name|getFinalStatus
 argument_list|()
+argument_list|)
 argument_list|)
 operator|.
 name|_
@@ -1452,6 +1494,105 @@ operator|.
 name|_
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|clarifyAppState (YarnApplicationState state)
+specifier|private
+name|String
+name|clarifyAppState
+parameter_list|(
+name|YarnApplicationState
+name|state
+parameter_list|)
+block|{
+name|String
+name|ret
+init|=
+name|state
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+switch|switch
+condition|(
+name|state
+condition|)
+block|{
+case|case
+name|NEW
+case|:
+return|return
+name|ret
+operator|+
+literal|": waiting for application to be initialized"
+return|;
+case|case
+name|NEW_SAVING
+case|:
+return|return
+name|ret
+operator|+
+literal|": waiting for application to be persisted in state-store."
+return|;
+case|case
+name|SUBMITTED
+case|:
+return|return
+name|ret
+operator|+
+literal|": waiting for application to be accepted by scheduler."
+return|;
+case|case
+name|ACCEPTED
+case|:
+return|return
+name|ret
+operator|+
+literal|": waiting for AM container to be allocated, launched and"
+operator|+
+literal|" register with RM."
+return|;
+case|case
+name|RUNNING
+case|:
+return|return
+name|ret
+operator|+
+literal|": AM has registered with RM and started running."
+return|;
+default|default:
+return|return
+name|ret
+return|;
+block|}
+block|}
+DECL|method|clairfyAppFinalStatus (FinalApplicationStatus status)
+specifier|private
+name|String
+name|clairfyAppFinalStatus
+parameter_list|(
+name|FinalApplicationStatus
+name|status
+parameter_list|)
+block|{
+if|if
+condition|(
+name|status
+operator|==
+name|FinalApplicationStatus
+operator|.
+name|UNDEFINED
+condition|)
+block|{
+return|return
+literal|"Application has not completed yet."
+return|;
+block|}
+return|return
+name|status
+operator|.
+name|toString
+argument_list|()
+return|;
 block|}
 block|}
 end_class
