@@ -190,6 +190,24 @@ name|api
 operator|.
 name|records
 operator|.
+name|FinalApplicationStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|YarnApplicationState
 import|;
 end_import
@@ -506,7 +524,7 @@ name|th
 argument_list|(
 literal|".state"
 argument_list|,
-literal|"State"
+literal|"YarnApplicationState"
 argument_list|)
 operator|.
 name|th
@@ -859,6 +877,17 @@ argument_list|)
 operator|.
 name|append
 argument_list|(
+name|appInfo
+operator|.
+name|getFinalStatus
+argument_list|()
+operator|==
+name|FinalApplicationStatus
+operator|.
+name|UNDEFINED
+condition|?
+literal|"N/A"
+else|:
 name|appInfo
 operator|.
 name|getFinalStatus
